2003-05-03  H.J. Lu <hjl@gnu.org>

	* gas/elf/elf.exp (run_list_test): Support pipe for readelf.

	* gas/elf/type.e-m32r: Removed.
	* gas/elf/type.e-mips: Likewise.
	* gas/elf/type.e-miwmmxt: Likewise.

	* gas/elf/type.e: Updated.

2003-05-03  H.J. Lu <hjl@gnu.org>

	* gas/ia64/ia64.exp: Add unwind.

	* gas/ia64/unwind.s: New. Test the new section attribute 'o'
	and the new section type "unwind".
	* gas/ia64/unwind.d: Likewise.

2003-05-02  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/mips.exp (mips_arch_init): Reimplement in
	a way that's safe with ancient versions of tcl/expect.

2003-05-01  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/mips.exp (mips_arch_init): New function.
	Call it before setting up architecture array entries.

2003-05-01  H.J. Lu <hjl@gnu.org>

	* gas/elf/elf.exp (run_list_test): Accept empty $opts.
	Add type test.

	* gas/elf/type.e: New file.
	* gas/elf/type.s: Likewise.
	* gas/elf/type.e-m32r: Likewise.
	* gas/elf/type.e-mips: Likewise.
	* gas/elf/type.e-miwmmxt: Likewise.

2003-05-01  H.J. Lu <hjl@gnu.org>

	* gas/ia64/ia64.exp: Add secname.

	* gas/ia64/secname.s: New. Test the trailing '#' in section
	name.
	* gas/ia64/secname.d: Likewise.

2003-05-01  H.J. Lu <hjl@gnu.org>

	* gas/ia64/ia64.exp: Add "global".

	* gas/ia64/global.d: New file.
	* gas/ia64/global.s: Likewise.

2003-04-30  H.J. Lu <hjl@gnu.org>

	* gas/ia64/ia64.exp: Add order.

	* gas/ia64/order.s: New file.
	* gas/ia64/order.d: Likewise.

2003-04-29  H.J. Lu <hjl@gnu.org>

	* gas/ia64/ia64.exp: Add align.

	* gas/ia64/align.d: New file.
	* gas/ia64/align.s: Likewise.

	* ia64/dependency-1.d: Remove the padding.

2003-04-30  H.J. Lu <hjl@gnu.org>

	* gas/ia64/ia64.exp: Add real.

	* gas/ia64/real.s: New file.
	* gas/ia64/real.d: Likewise.

2003-04-29  Nick Clifton  <nickc@redhat.com>

	* gas/elf/elf.exp: Invoke symver test.
        * gas/elf/symver.s: New test case.
        * gas/elf/symver.d: Expected output.

2003-04-24  Nick Clifton  <nickc@redhat.com>
